fix x overflow on mobile

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -328,8 +328,8 @@ button.bmviii-left-accordion:hover, button.bmviii-right-accordion:hover, button.
 .bmviii-waves {
     position: absolute;
     bottom: -5px;
-    left: -2.5%;
-    width: 105%;
+    width: 100%;
+    left: 0;
     font-size: 0;
 }
 
